--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-hot-toast": "^2.5.2",
-		"react-router-dom": "^7.6.2",
+		"react-router": "^7.6.2",
 		"tailwind-merge": "^3.0.1",
 		"tailwindcss-animate": "^1.0.7"
 	},
