--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
 	},
 	"dependencies": {
 		"@daily-co/daily-js": "^0.80.0",
+		"@daily-co/daily-react": "^0.22.0",
 		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-label": "^2.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@supabase/supabase-js": "^2.39.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"jotai": "^2.12.5",
 		"lucide-react": "^0.475.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
