--- a/package.json
+++ b/package.json
@@ -19,16 +19,20 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.15.0",
+		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.475.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-hot-toast": "^2.5.2",
 		"react-router": "^7.6.2",
 		"tailwind-merge": "^3.0.1",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"zod": "^3.24.1",
+		"zustand": "^5.0.2"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.19.0",
+		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^22.13.4",
 		"@types/react": "^18.3.1",
 		"@types/react-dom": "^18.3.1",
