--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@supabase/supabase-js": "^2.39.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"date-fns": "^4.1.0",
 		"framer-motion": "^11.15.0",
 		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.475.0",
